--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #0028c7;
+  --ifm-color-primary-dark: #0024b3;
+  --ifm-color-primary-darker: #0022a9;
+  --ifm-color-primary-darkest: #001c8b;
+  --ifm-color-primary-light: #002cdb;
+  --ifm-color-primary-lighter: #002ee5;
+  --ifm-color-primary-lightest: #0436ff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #a9e2fe;
+  --ifm-color-primary-dark: #7fd4fe;
+  --ifm-color-primary-darker: #6acdfd;
+  --ifm-color-primary-darkest: #2cb8fd;
+  --ifm-color-primary-light: #d3f0fe;
+  --ifm-color-primary-lighter: #e8f7ff;
+  --ifm-color-primary-lightest: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
